src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accumulated_Hours__c</fullName>
        <description>Total Hours to date</description>
        <inlineHelpText>Total Hours to date</inlineHelpText>
        <label>Accumulated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accumulated_Time_Logs__c</fullName>
        <label>Accumulated Time Logs</label>
        <summarizedField>Project_Task__c.Accumulated_Time_Logs__c</summarizedField>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Margin__c</fullName>
        <description>Actual Margin is the Contract Sum to Date minus Orginal Budget/Cost divided by Contract Sum to Date.</description>
        <formula>(( Contract_Sum_to_Date__c  -  cost__c)  /  Contract_Sum_to_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Task_Start_Date__c</fullName>
        <description>When did the first task on this project start?</description>
        <inlineHelpText>When did the first task on this project start?</inlineHelpText>
        <label>Actual Task Start Date</label>
        <summarizedField>Project_Task__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Task_Stop_Date__c</fullName>
        <label>Actual Task Stop Date</label>
        <summarizedField>Project_Task__c.Due_Date__c</summarizedField>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Allocated_Budget__c</fullName>
        <description>Budget dollars allocated for project</description>
        <inlineHelpText>Budget dollars allocated for project</inlineHelpText>
        <label>Allocated Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Days__c</fullName>
        <label>Allocated Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocated_Hours__c</fullName>
        <description>Hours Allocated to This  Project</description>
        <inlineHelpText>Hours Allocated to This  Project</inlineHelpText>
        <label>Allocated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocated_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use only for Staff Augmentation Projects.</description>
        <inlineHelpText>Use only for Staff Augmentation Projects.</inlineHelpText>
        <label>Allocated Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <description>Amount Remaing -from Oracle
Field Label changed to Backlog , Field Name Amount_Remaining</description>
        <label>Backlog</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billed_To_Date__c</fullName>
        <description>Billed To Date -from Oracle</description>
        <label>Billed To Date</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bi-Weekly</fullName>
                    <default>true</default>
                    <label>Bi-Weekly</label>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BudgetDifference__c</fullName>
        <formula>Allocated_Budget__c  -  Current_Expenditure__c</formula>
        <label>BudgetDifference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Remaining__c</fullName>
        <formula>Allocated_Budget__c - Current_Expenditure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Objectives__c</fullName>
        <description>The Link between Project &amp; the Business
Customer&apos;s Objective was Business Objectives</description>
        <inlineHelpText>The Link between Project &amp; the Business</inlineHelpText>
        <label>Customer&apos;s Objective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Order_Add__c</fullName>
        <label>Change Order Additions</label>
        <summarizedField>Change_Order__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Change_Order__c.Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Change_Order__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Change_Order_Additions__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Change Order Additions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Order_Deletions__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Change Order Deletions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Orders_Deduct__c</fullName>
        <label>Change Orders Deductions</label>
        <summarizedField>Change_Order__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Change_Order__c.Amount__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Change_Order__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chillers_Shipped__c</fullName>
        <description>Chillers Shipped Date</description>
        <label>Chillers Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chillers_Witness_Tested__c</fullName>
        <label>Chillers Witness Tested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Amount__c</fullName>
        <description>Contract Amount from Oracle</description>
        <label>Contract Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <description>Contract Signed</description>
        <label>Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sum_to_Date__c</fullName>
        <description>Contract Sum to Date is the same as SOV Contract Sum to Date -from Oracle</description>
        <label>Contract Sum to Date</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Budget_Risk__c</fullName>
        <description>Maintaining Project Budget</description>
        <label>Current Budget Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Over</fullName>
                </value>
                <value>
                    <fullName>At</fullName>
                </value>
                <value>
                    <fullName>Under</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Customer_Satisfaction__c</fullName>
        <description>Current Customer Satisfaction</description>
        <label>Current Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5- High</fullName>
                </value>
                <value>
                    <fullName>3- Meduim</fullName>
                </value>
                <value>
                    <fullName>1- Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Expenditure__c</fullName>
        <description>Dollars expended to date on the project.</description>
        <inlineHelpText>Dollars expended to date on the project.</inlineHelpText>
        <label>Current Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Margin__c</fullName>
        <description>Current Margin -from Oracle</description>
        <label>Current Margin</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Margin__c</fullName>
        <description>Estimated Margin -from Oracle</description>
        <label>Estimated Margin</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <description>Estimated start date</description>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if the Project&apos;s Expenses are billable to End-client</description>
        <label>Expense Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expenses_are_billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expenses are billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Info_Complete_Credit_Reviewed__c</fullName>
        <description>Job Info Complete &amp; Credit Reviewed</description>
        <label>Job Info Complete &amp; Credit Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Review__c</fullName>
        <description>Legal Review</description>
        <label>Legal Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_Invoiced__c</fullName>
        <description>MCP Invoiced Date</description>
        <label>MCP Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_Shipped__c</fullName>
        <description>MCP Shipped Date</description>
        <label>MCP Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_Startup__c</fullName>
        <description>MCP Startup Date</description>
        <label>MCP Startup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_ordered__c</fullName>
        <description>MCP ordered Date</description>
        <label>MCP ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCP_perf_testing__c</fullName>
        <description>MCP perf testing Date</description>
        <label>MCP perf testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_days__c</fullName>
        <label>Net (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Bill_Date__c</fullName>
        <label>Next Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_City__c</fullName>
        <label>Opportunity City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Opportunity Name</description>
        <formula>Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_State_Province__c</fullName>
        <label>Opportunity State/Province</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Submitted_into_MST__c</fullName>
        <label>Order Submitted into MST?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Sale_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_End_Clients_Name__c</fullName>
        <description>Upon creation of a project the Owner/End-Client’s Name field will be updated with the value from the Opportunity Owner/End-Client’s Name (API Name: End_Customer__c)</description>
        <label>Owner/End-Client’s Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR__c</fullName>
        <description>PAR</description>
        <label>PAR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <description>PO Date</description>
        <label>PO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_To_Date__c</fullName>
        <description>Original Field Name was Paid To Date -this field will be updated from Oracle</description>
        <label>Recognized Revenue</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sub Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Collected__c</fullName>
        <description>Payment Collected is the money received but not recognized as revenue. This field will be updated from Oracle.</description>
        <label>Customer Payment Collected</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Production_Delays__c</fullName>
        <description>Production Delays text</description>
        <label>Production Delays?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Ext Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <description>Opportunity Project Number</description>
        <formula>&quot;&quot;</formula>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Objectives__c</fullName>
        <description>Project Objectives is a text field associated with the Project Charter information
The Project Objectives are the major project milestones.
MQ Objectives was  Project Objectives</description>
        <inlineHelpText>MQ Objectives - Project Objectives are the major project milestones.</inlineHelpText>
        <label>MQ Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Sol_Job_Number__c</fullName>
        <externalId>true</externalId>
        <label>Project Sol Job Number</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status_Log__c</fullName>
        <label>Project Status Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Projected_Actuals__c</fullName>
        <description>Projected Actuals Amount
Read Only Field - Oracle Feed</description>
        <label>Projected Actuals</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Budget__c</fullName>
        <description>Projected Budget Amount
Read Only Field - Oracle Feed</description>
        <label>Projected Budget</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Under_Over__c</fullName>
        <description>Projected Under / Over Amount
Read Only Field - Oracle Feed</description>
        <label>Projected Under / Over</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Reviewed__c</fullName>
        <description>Proposal Reviewed Date</description>
        <label>Proposal Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFQ__c</fullName>
        <description>Request For Quote  is a manual entry field.</description>
        <label>RFQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recreate_Check_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Remove existing Check Lists and recreates them from Templates. If no Check Lists are found, creates new Check Lists from Templates.</description>
        <inlineHelpText>Remove existing Check Lists and refresh them from Templates. If no Check Lists are found, creates new Check Lists from Templates.</inlineHelpText>
        <label>Refresh Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <description>Current Schedule Risk, are we track on meeting completion date.</description>
        <label>Current Schedule Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ahead</fullName>
                </value>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Behind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO__c</fullName>
        <description>The SO Number will be provided by Oracle</description>
        <inlineHelpText>Equipment Sales Order Number</inlineHelpText>
        <label>SO #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Number__c</fullName>
        <description>SR # will be provided by Oracle</description>
        <inlineHelpText>Solutions Service Request Nmber</inlineHelpText>
        <label>SR #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_in_MST__c</fullName>
        <description>Selection in MST</description>
        <label>Selection in MST</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solutions_Job_Number__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solutions Job Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Current Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEVELOP-Pre-Contract</fullName>
                </value>
                <value>
                    <fullName>INITIATE-Turnover</fullName>
                </value>
                <value>
                    <fullName>PLAN-Pre-Construction</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Delivery</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Installation</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Commissioning</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Punchlist</fullName>
                </value>
                <value>
                    <fullName>CLOSE-Closeout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date Project Starts</description>
        <inlineHelpText>Date Project Starts</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                    <default>true</default>
                    <label>Pipeline</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Complete-Warranty</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>LOST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staunton_Order_Processing_Started__c</fullName>
        <description>Staunton Order Processing  Started Date</description>
        <label>Staunton Order Processing  Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <description>Project Stop (End Date) - Field Label renamed Completion Date.</description>
        <inlineHelpText>Project Stop (End Date)</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submittals_Approved__c</fullName>
        <label>Submittals Approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Change_Orders__c</fullName>
        <description>Sum of change orders is the SOV Net change by chnage orders. Same vaule from Oracle.</description>
        <label>Sum of Change Orders</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Accumulated_Hours_for_Sub_Projects__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Accumulated Hrs for Sub-Projecs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Allocated_hours_for_sub_projects__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Allocated hours for sub projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Amount__c</fullName>
        <formula>Original_Sale_Amount__c + Change_Order_Additions__c + Change_Order_Deletions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Current_Expenditure_for_SubProject__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Current Expenditure for SubProject</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_allocated_Budget_from_Sub_Projects__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total allocated Budget from Sub-Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cost__c</fullName>
        <description>Project cost</description>
        <label>Original Budget/Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>est_chillers_shipped_date__c</fullName>
        <description>est chillers shipped date
Read Only Field -Oracle Feed</description>
        <label>est chillers shipped date</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Milestone_Billing</fullName>
        <active>true</active>
        <label>Milestone Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>POC_SOV</fullName>
        <active>true</active>
        <label>POC / SOV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services_Hourly</fullName>
        <active>true</active>
        <description>Use this to create simple staff augmentation projects.</description>
        <label>Hourly Recurring</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Augmentation_Fixed_Price</fullName>
        <active>true</active>
        <description>Use this type to create fixed bid projects.</description>
        <label>Fixed Price</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>